--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "mocha": "~2.4.5"
+    "mocha": "^3.5.0"
   },
   "scripts": {
     "test": "mocha --ui tdd"
